@@ -19,8 +19,8 @@
 // ========================================================================
 //
 // File          : $RCSfile: mailbox.cc,v $
-// Revision      : $Revision: 1.28 $
-// Revision date : $Date: 2005/01/05 16:16:45 $
+// Revision      : $Revision: 1.29 $
+// Revision date : $Date: 2005/01/05 18:21:17 $
 // Author(s)     : Nicolas Rougier
 // Short         : 
 //
@@ -85,6 +85,7 @@ Mailbox::Mailbox (Biff *biff)
 	timetag_ = 0;
 	hidden_.clear();
 	seen_.clear();
+	unread_.clear();
 	mutex_ = g_mutex_new();
 	monitor_mutex_ = g_mutex_new();
 }
@@ -113,6 +114,7 @@ Mailbox::Mailbox (const Mailbox &other)
 	timetag_= 0;
 	hidden_.clear();
 	seen_.clear();
+	unread_.clear();
 	mutex_ = g_mutex_new();
 	monitor_mutex_ = g_mutex_new();
 }
@@ -560,7 +562,7 @@ void Mailbox::parse (std::vector<std::string> &mail, int status,
 			//
 			h.setmailid (uid);
 			if (hidden_.find (h.mailid_) == hidden_.end ())
-				new_unread_.push_back (h);
+				new_unread_[h.mailid_] = h;
 			new_seen_.insert (h.mailid_);
 #ifdef DEBUG
 			g_message ("[%d] Parsed mail with id \"%s\"", uin_,
